--- a/WeatherBot.ipynb
+++ b/WeatherBot.ipynb
@@ -34,10 +34,10 @@
     "import urllib\n",
     "import time\n",
     "#Setup and authenticate Tweepy\n",
-    "CONSUMER_KEY = \"EIJQMi72kXvftAEgT2h3i3tmh\"\n",
-    "CONSUMER_SECRET = \"WqyHcLohSTBVqNm6KLPoavz0BT9otc0xBUrESLtvQXqVqKvm3n\"\n",
-    "ACCESS_TOKEN = \"710251143117541378-rBbpxaRAyg6kKhpSajg99rp3IAy3vm4\"\n",
-    "ACCESS_TOKEN_SECRET = \"qOyqb6g2L7DjBbGlWl6eG57cRsyuJlR3NS2FUbN9wvfi1\"\n",
+    "CONSUMER_KEY = \"Your_key\"\n",
+    "CONSUMER_SECRET = \"Your_Secret\"\n",
+    "ACCESS_TOKEN = \"TOKEN\"\n",
+    "ACCESS_TOKEN_SECRET = \"Secret\"\n",
     "\n",
     "auth = tweepy.OAuthHandler(CONSUMER_KEY, CONSUMER_SECRET)\n",
     "auth.set_access_token(ACCESS_TOKEN, ACCESS_TOKEN_SECRET)\n",
