--- a/WeatherBot.ipynb
+++ b/WeatherBot.ipynb
@@ -94,7 +94,7 @@
     "\n",
     "        # Defining a function where it reads & stores the text for tweet from forecast key present in JSON object. It also reads the day\n",
     "        # from the JSON object. The JSON object contains weather forecast for day and night in each response object.\n",
-    "        # Calling checkCar function from this function\n",
+    "        # Calling checkChar function from this function\n",
     "        def forecast(i):\n",
     "            if i == 0:\n",
     "                first_day = parsed_json['forecast']['txt_forecast']['forecastday'][i]['title']\n",
@@ -104,22 +104,22 @@
     "                first_day_night = parsed_json['forecast']['txt_forecast']['forecastday'][i]['title']\n",
     "                tweet = \"Tonight\" + '(' + first_day_night + ')\\n' + parsed_json['forecast']['txt_forecast']['forecastday'][i]['fcttext']\n",
     "                                \n",
-    "            checkCar(tweet)\n",
+    "            checkChar(tweet)\n",
     "            return\n",
     "        # This function splits the tweet in two parts. Twitter has a char limit of 140 however the limit has been set to 100 because \n",
     "        # it also counts image link in char limit(23) and the algorithm also appends city name. Returns the split variables as an output\n",
-    "        def splitCar(value):\n",
+    "        def splitChar(value):\n",
     "            split1 = value[:100]\n",
     "            split2 = value[100:200]\n",
     "            return split1,split2\n",
     "        \n",
     "        # Checks for the length of tweet text parsed from forecast(). Modifies the text of these two tweets by adding 1/2 and 2/2 showing\n",
     "        # continuation of tweet. Also tweets an appropriate image according to the current weather\n",
-    "        def checkCar(value):\n",
+    "        def checkChar(value):\n",
     "            # Setting the path as per local machine. Change this path as per your system's file location.\n",
     "            path = 'C:/Users/KrutikaSatish/Desktop/images/'\n",
     "            if len(value) > 100:\n",
-    "                var1,var2 = splitCar(value)\n",
+    "                var1,var2 = splitChar(value)\n",
     "                var1 = cities[j] + ' ' + var1 + '..1/2'\n",
     "                var2 = var2 + '..2/2'\n",
     "                # Fetching the name of the appropriate image from the response The images were downloaded from Weather Underground API.\n",
